src/objects/MaskObjectData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to configure the list of fields and child objects to be masked.</description>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <label>Field Api Name To Mask</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Api_Name__c</fullName>
        <label>Object Api Name To Mask</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Api_Name__c</fullName>
        <label>Parent Object Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Field_To_Parent__c</fullName>
        <label>Relationship Field To Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MaskObjectData</label>
</CustomObject>